# Plonky2-lib

./: .gitignore  Cargo.toml
benches/: batch_ecdsa_benchmark.rs  batch_ecdsa_prove_benchmark.rs
scripts/: run_tests.sh
src/: lib.rs
src/ecdsa/: README.md  mod.rs  serialization.rs
src/ecdsa/curve/: curve_adds.rs  curve_msm.rs  curve_multiplication.rs  curve_summation.rs  ecdsa.rs  glv.rs  secp256k1.rs
src/ecdsa/gadgets/: biguint.rs  curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  nonnative.rs  split_nonnative.rs
src/hash/: keccak256.rs  mod.rs  types.rs
src/nonnative/: biguint.rs
src/rlp/: mod.rs
src/smt/: README.md  mod.rs
src/smt/gadgets/: common.rs  mod.rs
src/smt/gadgets/process/: mod.rs  process_smt.rs
src/smt/proof/: mod.rs  process.rs
src/u32/: interleaved_u32.rs  mod.rs
src/u32/gates/: mod.rs  uninterleave_to_b32.rs
src/zkdsa/: account.rs
src/zkdsa/circuits/: mod.rs
src/zkdsa/gadgets/signature/: mod.rs
